// Vitest Snapshot v1

exports[`BackTop Component > props.content works fine 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <span
    class="custom-node"
  >
    TNode
  </span>
</button>
`;

exports[`BackTop Component > props.default works fine 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <span
    class="custom-node"
  >
    TNode
  </span>
</button>
`;

exports[`BackTop Component > props.shape is equal to circle 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--circle t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <div>
    <svg
      class="t-icon t-icon-backtop t-back-top__icon"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="backtop"
      >
        <path
          d="M17.5 14.5L12 9L6.5 14.5M5 5H19M12 10.25V20"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    <span
      class="t-back-top__text"
    >
      TOP
    </span>
  </div>
</button>
`;

exports[`BackTop Component > props.shape is equal to square 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <div>
    <svg
      class="t-icon t-icon-backtop t-back-top__icon"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="backtop"
      >
        <path
          d="M17.5 14.5L12 9L6.5 14.5M5 5H19M12 10.25V20"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    <span
      class="t-back-top__text"
    >
      TOP
    </span>
  </div>
</button>
`;

exports[`BackTop Component > props.size is equal to medium 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  BackTop
</button>
`;

exports[`BackTop Component > props.size is equal to small 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-s"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  BackTop
</button>
`;

exports[`BackTop Component > props.theme is equal to dark 1`] = `
<button
  class="t-back-top t-back-top--theme-dark t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  Text
</button>
`;

exports[`BackTop Component > props.theme is equal to light 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  Text
</button>
`;

exports[`BackTop Component > props.theme is equal to primary 1`] = `
<button
  class="t-back-top t-back-top--theme-primary t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  Text
</button>
`;

exports[`BackTop Component > slots.content works fine 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <span
    class="custom-node"
  >
    TNode
  </span>
</button>
`;

exports[`BackTop Component > slots.default works fine 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <span
    class="custom-node"
  >
    TNode
  </span>
   
</button>
`;
